# rls

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: quality.yml  release.yml  test.yml
rls/: _sql_gen.py  alembic_rls.py  create_policies.py  register_rls.py  rls_session.py  rls_sessioner.py  schemas.py  utils.py
test/: database.py  expectations.py  fastapi_sample.py  models.py  test_alembic.py  test_alembic_rls_unit.py  test_async_rls.py  test_create_policies_unit.py  test_fastapi.py  test_rls.py  test_schemas.py
test/alembic/: env.py
test/alembic/versions/: 3034f8e51239_test_custom_operation.py  49454cab6435_test_custom_operation.py  699eeca16988_test_custom_operation.py  c3da625851bb_test_custom_operation.py
