[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rls/*"]
dev-mode-dirs = ["."]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.metadata.hooks.vcs.urls]
source_archive = "https://github.com/DelfinaCare/rls/archive/{commit_hash}.zip"

[project]
name = "rls"
dynamic = ["version"]
authors = [
  { name = "DelfinaCare", email = "open-source@delfina.com" }
]
description = "python sqlalchemy rls integration package for psql"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pydantic >= 2.9.1",
  "sqlalchemy >= 2.0.34",
  "alembic >= 1.13.3",
  "fastapi >= 0.115.0",
]
[project.optional-dependencies]
dev = [
  "httpx >= 0.25.1",
  "mypy >=1.11.2",
  "psycopg2 >= 2.9",
  "testing-postgresql >= 1.3.0",
  "uvicorn >= 0.34.0",
  "ruff >= 0.15.0",
]

[project.urls]
Homepage = "https://github.com/DelfinaCare/rls"
Issues = "https://github.com/DelfinaCare/rls/issues"

[tool.mypy]

[[tool.mypy.overrides]]
module = "testing.*"
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I"]
